[gd_scene load_steps=7 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]
[ext_resource path="res://ARCADECLASSIC.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
extra_spacing_char = 1
extra_spacing_space = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 72
extra_spacing_char = 1
font_data = ExtResource( 2 )

[node name="Lobby" type="Node"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1025.0
margin_bottom = 600.0

[node name="hostMenu" type="ColorRect" parent="Panel"]
margin_left = 112.5
margin_top = 143.082
margin_right = 912.5
margin_bottom = 343.082
color = Color( 0.372549, 0.345098, 0.345098, 1 )

[node name="hostButton" type="Button" parent="Panel/hostMenu"]
margin_left = 298.782
margin_top = 82.8289
margin_right = 499.782
margin_bottom = 132.829
custom_fonts/font = SubResource( 1 )
text = "Host Game"

[node name="joinMenu" type="ColorRect" parent="Panel"]
margin_left = 112.5
margin_top = 368.5
margin_right = 912.5
margin_bottom = 568.5
color = Color( 0.372549, 0.345098, 0.345098, 1 )

[node name="Label" type="Label" parent="Panel/joinMenu"]
margin_left = 228.359
margin_top = 68.4737
margin_right = 406.359
margin_bottom = 101.474
custom_fonts/font = SubResource( 2 )
text = "IP Address:"

[node name="joinButton" type="Button" parent="Panel/joinMenu"]
margin_left = 288.019
margin_top = 134.324
margin_right = 489.019
margin_bottom = 184.324
custom_fonts/font = SubResource( 3 )
text = "Join Game"

[node name="IPAddress" type="TextEdit" parent="Panel/joinMenu"]
margin_left = 426.499
margin_top = 66.5059
margin_right = 606.499
margin_bottom = 106.506

[node name="Label" type="Label" parent="Panel"]
margin_left = 262.5
margin_top = 37.012
margin_right = 762.5
margin_bottom = 111.012
custom_fonts/font = SubResource( 4 )
text = "Insurrection"
align = 1
[connection signal="pressed" from="Panel/hostMenu/hostButton" to="." method="_on_hostButton_pressed"]
[connection signal="pressed" from="Panel/joinMenu/joinButton" to="." method="_on_joinButton_pressed"]
